@@ -1,19 +1,29 @@
+AUTHOR_PLEDGE
 Build.PL
 Changes
+INSTALL
+LICENSE
 MANIFEST
-META.yml # Will be created by "make dist"
+META.json
+META.yml
+Makefile.PL
 README
+README.mkdn
+SIGNATURE
 lib/Test/Pod/Snippets.pm
-lib/Test/Pod/Snippets/Parser.pm
 podsnippets
+script/test-pod-snippets.PL
+t/00-compile.t
 t/00-load.t
+t/000-report-versions.t
 t/01-general.t
 t/02-extractions.t
-t/pod.t
-t/99signature.t
 t/generate_test.t
-Makefile.PL
-script/test-pod-snippets.PL
 t/new.t
-t/runtest.t
+t/pod.t
 t/preserve_lines.t
+t/runtest.t
+xt/99signature.t
+xt/perl-critic-progressive.t
+xt/pod-coverage.t
+xt/release/unused-vars.t
