@@ -1,0 +1,8 @@
+name    = Test-Pod-Snippets
+author  = Yanick Champoux <yanick@cpan.org>
+license = Perl_5
+copyright_holder = Yanick Champoux
+copyright_year   = 2006
+
+[@YANICK]
+
