@@ -2,6 +2,7 @@ Revision history for Test-Pod-Snippets
 
 {{$NEXT}}
     * Change Object::InsideOut for Moose.
+    * Move release maintenance to Dist::Zilla
 
 0.06 Tue Aug 5 2008
     * Add Params::Validate as a dependency.
